# voronoi

./: .gitignore  CMakeLists.txt
src/: main.cpp  tools.hpp
